FIX layout grid and other things

--- a/src/loading.html
+++ b/src/loading.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
+<style type="text/css">
 body, html {
 	width: 640px;
 	height: 400px;
@@ -17,6 +17,8 @@ div {
 .loading {
   display: block;
   position: absolute;
+  font-smoothing: antialiased;
+  color: #222;
   top: 25%;
   left: 25%;
   height: 50%;
